1) Added Airflow username password to env 2) Breakup of python code and classes to util files 3) Move from Bash to Python decorater

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ AIRFLOW_UID=50000
 AIRFLOW_GID=0
 SPOTIFY_DB_USER=spotify_user 
 SPOTIFY_DB_PASSWORD='spotify_password'
+AIRFLOW_DB_USER=airflow_user 
+AIRFLOW_DB_PASSWORD='airflow_password'
